--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "uuid": "^3.3.3"
   },
   "scripts": {
-    "start-server": "NODE_ENV=development nodemon -w ./server ./server",
+    "start-server": "NODE_ENV=development nodemon -w ./server -- --harmony ./server",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
